Fix Game Validation Button
The button that shows up when the validation is taking too long disappeared after clicking away from the debugger.  This fixes that and the accompanying text now supports light and dark mode.

--- a/client/css/editor/sidebarModules.css
+++ b/client/css/editor/sidebarModules.css
@@ -250,7 +250,7 @@
 }
 
 .pest_control.editorModule .validation-time {
-  color: var(--textDimColor1);
+  color: var(--textColor);
   font-size: 12px;
   font-style: italic;
 }
